@@ -1,4 +1,8 @@
+2005-10-23 Pierrick LE GALL
 
+	* bug fixed: during file tree synchronization, warning on finding
+	the next rank of category which has no sub-categories yet.
+	
 2005-10-23 chrisaga
 
 	* bug fixed: cat-list.tpl validate now
